--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.15",
+    "angular2-websocket": "^0.6.2",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
